fix: spacing between cards

--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -433,7 +433,7 @@ h6 {
 .restaurant-card {
   background-color: var(--beige);
   text-align: center;
-  margin: 0.4rem;
+  margin: 0.25rem;
 }
 
 .restaurant-card img {
@@ -517,7 +517,7 @@ h6 {
 }
 
 .dishes-list li {
-  margin: 0 0.3rem;
+  margin: 0 0.25rem;
 }
 
 @media (max-width: 768px) {
